# ProjetoAAA

./: .gitignore  FENTest.py  README.md  RL-StockFish.py  Stock-RLPlayer.py  Stock-Stock.py  TODO  __init__.py  log.txt  main.py  pyproject.toml
Game/: chess.py  chessboard.py  cli_display.py  moveGeneration.py  pieces.py
GeneticAlgorythm/: main.py
ReiforcementLearning/: NeuralNetwork.py  RLplayer.py  env.py
StockFish/: StockFishplayer.py
assets/: data.txt  data_w.txt
model/black_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/black_model/variables/: variables.data-00000-of-00001  variables.index
model/white_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
model/white_model/variables/: variables.data-00000-of-00001  variables.index
src/: BenchMark.py  DataAnalysis.ipynb  RL-RL.py  __init__.py  main.py  mp_main.py
src/Game/: chess.py  chessboard.py  cli_display.py  moveGeneration.py  pieces.py
src/GeneticAlgorythm/: GAPlayer.py
src/ReiforcementLearning/: NeuralNetwork.py  RLplayer.py
src/ReinforcementLearning/: NeuralNetwork.py  RLplayer.py  test_nn.py
src/StockFish/: StockFishplayer.py
src/lib/: constants.py  tree.py  typedef.py
